src/objects/Newsletter__c.object
<CustomObject>
    <fields>
        <fullName>HTML_Content__c</fullName>
        <label>HTML Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Saved_On_SendGrid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saved On SendGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Content__c</fullName>
        <label>Text Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Newsletter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Newsletter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Newsletters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>